--- a/static/offline.html
+++ b/static/offline.html
@@ -7,7 +7,9 @@
 		<link rel="manifest" crossorigin="use-credentials" href="manifest.json" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+	<body>
+		<div>
+            <h1>Vous êtes hors ligne</h1>
+        </div>
 	</body>
 </html>
