--- a/static/offline.html
+++ b/static/offline.html
@@ -5,11 +5,11 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="manifest" crossorigin="use-credentials" href="manifest.json" />
-		%sveltekit.head%
 	</head>
 	<body>
 		<div>
             <h1>Vous êtes hors ligne</h1>
+			<h2>Vous ne pouvez pas accéder au service</h2>
         </div>
 	</body>
 </html>
